--- a/index.html
+++ b/index.html
@@ -156,16 +156,16 @@
       <img src="profile.jpg" alt="Krishna Sri Chaitanya Kesani" class="profile-pic" />
       <h1>Krishna Sri Chaitanya Kesani</h1>
       <p class="subtitle">Master’s Student, Computer Science @ University of Basel</p>
-      <p class="subtitle">UI/UX Designer | HCI Enthusiast | Aviation Privacy Researcher</p>
+      <p class="subtitle">Data Analytics & Automation Enthusiast | Aviation Tech Researcher</p>
     </header>
 
     <section id="about">
       <h2>About Me</h2>
-      <p>Hello! I’m Krishna Sri Chaitanya Kesani, a Master’s student in Computer Science at the University of Basel with a strong passion for UI/UX Design, Human-Computer Interaction (HCI), and the aviation sector.</p>
-      <p>I combine my technical skills with creativity to design intuitive, user-friendly digital experiences. Recently, I completed a project focused on privacy risks in aviation systems, addressing critical security challenges and proposing innovative solutions.</p>
-      <p>Alongside this, I have worked on the "Argument Seesaw" project, which further developed my skills in designing interactive, engaging interfaces grounded in user-centered principles.</p>
-      <p>My goal is to create seamless, accessible, and visually appealing applications that improve user satisfaction while ensuring privacy and security.</p>
-      <p>Feel free to reach out to me!</p>
+<p>Hello! I’m Krishna Sri Chaitanya Kesani, a Master’s student in Computer Science at the University of Basel with a strong focus on data analytics, process automation, and digital transformation.</p>
+<p>I specialize in working with Python, SQL, and database systems, and have hands-on experience in data integration, visualization, and workflow optimization.</p>
+<p>I am passionate about transforming raw data into meaningful insights that enable operational efficiency and strategic decision-making. I also enjoy building scalable data solutions using modern platforms such as Databricks and cloud-based analytics tools.</p>
+<p>With a problem-solving mindset and an analytical foundation, I aim to deliver reliable, impactful, and data-driven solutions across industries such as aviation, automation, and enterprise systems.</p>
+<p>Feel free to reach out to me!</p>
       <ul class="contact-list" aria-label="Contact information">
         <li>📞 +41 78 338 35 33</li>
         <li>📧 <a href="mailto:k.kesani@stud.unibas.ch">k.kesani@stud.unibas.ch</a></li>
@@ -197,19 +197,19 @@
   <h2>Experience</h2>
   <div class="projects">
     <article class="project-card" tabindex="0">
-      <h3>IT & UX Design Intern</h3>
+      <h3>Data Analyst</h3>
       <p><strong>HCL Technologies, Chennai, India (2023–2024)</strong><br>
-      Conducted usability testing and wireframing with Figma and Adobe XD. Built backend systems using Python (Flask/Django), MySQL, and RESTful APIs. Supported multilingual outreach and content development.</p>
+      Led data migration from on-prem SAP to cloud (Databricks/Azure) by building optimized ETL pipelines in Python (Pandas, PySpark, SQL) and developing Power BI dashboards for migration tracking and data quality.</p>
     </article>
     <article class="project-card" tabindex="0">
-      <h3>Freelance UX Designer & Developer</h3>
+      <h3>Research Assistant – Digital Systems & Automation</h3>
       <p><strong>Ridge Soft Solutions, India (2022–2023)</strong><br>
-      Designed portals for nonprofits using React.js and Firebase. Led user-centered design cycles from requirements to prototypes. Focused on storytelling-based UX to boost engagement.</p>
+      Partnered with the analytics team to automate business processes by standardizing data pipelines and developing interactive Power BI dashboards for operational and performance insights.</p>
     </article>
     <article class="project-card" tabindex="0">
-      <h3>Student Research Assistant – Data Analyst</h3>
+      <h3>Software Development Intern</h3>
       <p><strong>KL University, India (2021–2022)</strong><br>
-      Developed Python tools for data collection and analysis. Used BeautifulSoup, Pandas, spaCy, Power BI, and Matplotlib. Emphasized ethical data scraping aligned with privacy policies.</p>
+      Developed a prototype tool to automate data entry and reporting, integrating multi-departmental data via SQL and supporting early digital transformation initiatives within the university.</p>
     </article>
   </div>
 </section>
